fix: enhance table-courses component styles and update text truncation logic

--- a/src/app/Pages/Courses/Components/table-courses/table-courses.component.scss
+++ b/src/app/Pages/Courses/Components/table-courses/table-courses.component.scss
@@ -31,6 +31,12 @@
       top: 0;
       z-index: 2;
       width: 100%;
+    
+    
+    }
+    .nameTh{
+      max-width: 280px;
+      width: 280px !important;
     }
   
     .course-name {
